--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
             <hr>
             <app-server></app-server>
             <app-server></app-server>
+            <hr>
+            <app-warning></app-warning>
+            <app-success></app-success>
         </div>
     </div>
 </div>
