--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
         <div class="col-xs-12">
             <h3>I'm in the app component</h3>
             <hr>
-            <app-server></app-server>
-            <app-server></app-server>
+            <app-servers></app-servers>
             <hr>
             <app-warning></app-warning>
             <app-success></app-success>
