--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -7,7 +7,7 @@ class="form-control"
 type="text" 
 class="form-control"
 [(ngModel)] = "serverName">
-<p>{{ serverName}}</p>
+<!-- <p>{{ serverName}}</p> -->
 <button 
 class="btn btn-primary" 
 [disabled]="!allowNewServer"
