--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
             <hr>
             <app-warning></app-warning>
             <app-success></app-success>
+
+            <app-users></app-users>
         </div>
     </div>
 </div>
